# barrel

./: .editorconfig  .gitignore  Makefile.am  Makefile.repo  README.md  barrel.spec.in  configure.ac
.github/workflows/: ci-leap.yml  ci-tumbleweed.yml
barrel/: .gitignore  Makefile.am  barrel.cc  cmds.cc  cmds.h  commit.cc  commit.h  create-encryption.cc  create-encryption.h  create-filesystem.cc  create-filesystem.h  create-lvm-lv.cc  create-lvm-lv.h  create-lvm-vg.cc  create-lvm-vg.h  create-partition-table.cc  create-partition-table.h  create-pool.cc  create-pool.h  create-pools.cc  create-pools.h  create-raid.cc  create-raid.h  extend-pool.cc  extend-pool.h  generic.cc  generic.h  handle.cc  handle.h  help.cc  help.h  load-devicegraph.cc  load-devicegraph.h  load-pools.cc  load-pools.h  load.cc  load.h  reduce-pool.cc  reduce-pool.h  remove-device.cc  (+41 more)
barrel/Utils/: Args.h  BarrelDefines.h  BarrelTmpl.h  Colors.cc  Colors.h  CompletionHelper.cc  CompletionHelper.h  GetOpts.cc  GetOpts.h  JsonFile.cc  JsonFile.h  Makefile.am  Misc.cc  Misc.h  Mockup.cc  Mockup.h  Prompt.cc  Prompt.h  Readline.cc  Readline.h  Table.cc  Table.h  Text.cc  Text.h
data/: Makefile.am  barrel.logrotate  mapping.json
doc/: .gitignore  Makefile.am  barrel.xml.in  design-decisions.md  examples.txt  tutorial.md
package/: .gitignore  barrel.changes
po/: Makefile.am  README  barrel.pot  ca.po  cs.po  da.po  de.po  es.po  fr.po  id.po  it.po  ja.po  mk.po  pt_BR.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
testsuite/: Makefile.am  btrfs1.cc  completion.cc  complex1.cc  dmraid1.xml  dmraid2.xml  empty1.xml  empty2.xml  empty3.xml  encryption1.cc  ext-journal.xml  ext1.cc  getopts.cc  gpt1.cc  help1.cc  helpers.h  load1.cc  load1.xml  luks1.cc  lvm1.cc  mapping1.json  mapping2.json  misuse1.cc  misuse2.cc  misuse3.cc  msdos1.xml  parse-line.cc  pools1.cc  pools2.cc  raid1.cc  real1.xml  real2.xml  real6.xml  real7.xml  real8.xml  real9.xml  remove1.cc  remove2.cc  resize1.cc  show1.cc  (+9 more)
testsuite/helpers/: Makefile.am  run-and-capture.h
